# study

./: .gitignore  .gitmodules  LICENSE.txt  README.org
books/crafting-interpreters/clox/: .dir-locals.el  .gitignore  CMakeLists.txt  memcheck.sh
books/crafting-interpreters/clox/cmake/: FindCriterion.cmake
books/crafting-interpreters/clox/src/: main.c
books/crafting-interpreters/clox/src/clox/: foo.c  linkedlist.c
books/crafting-interpreters/clox/src/include/clox/: foo.h  linked_list.h
books/crafting-interpreters/clox/test/: example_test.c  linked_list_test.c
books/learn-apl/: .gitignore  abntex2.org  apl.tex  cmapl10.mf  learn-apl.apl  learn-apl.org
books/little-mler/: 1-building-blocks.ml
books/power-of-prolog/: .gitignore  00-intro-01-facets.org  02-logical-foundations.org  README.org  jug_problem.prolog  other.org  power-of-prolog-notes.org
books/practical-common-lisp/: pcl.lisp
books/purescript-by-example/: Makefile
books/starting-forth/: README.org
books/theorem-proving-in-lean/: .gitignore  ch02-01.lean  ch02-02.lean  ch02-03-2.lean  ch02-03.lean  ch02-04-ex.lean  ch02-04.lean  ch02-05.lean  ch02-06-2.lean  ch02-06.lean  ch02-07.lean  ch02-08-2.lean  ch02-08.lean  ch02-09.lean  ch02-exercises.lean  lean.org
courses/machine-learning/: .gitignore  1-estatistica-basica.org  11-matplotlib.org  2-anaconda-spyder.org  3-pandas-criando-dataframe.org  9-numpy.org
courses/psx-programming/: .gitignore  01-hardware.org  02-mips-assembly.org  03-mips-pipeline.org  04-warmup-exercises.org  05-subroutines-negative-numbers.org  06-cisc-vs-risc.org  07-graphics-system.org  08-rendering-polygons.org  09-memory-alignment.org  10-copying-data-to-vram.org  11-moving-from-asm-to-c.org  12-psy-q-data-types.org  13-introduction-to-3d-graphics.org  14-the-gte-coprocessor.org  15-fixed-point-math.org  17-controller-input.org  (+25 more)
exercises/: README.org
exercises/neural-networks/ann-cpp/: CMakeLists.txt
exercises/neural-networks/ann-cpp/src/: makeTrainingData.cpp
little-mler/: 2-matchmaker-matchmaker.ml  3-cons-is-still-magnificent.ml
nand2tetris/: README.org
purescript-by-example/: .gitignore  bower.json
research/psp/helloworld/: CMakeLists.txt  build.sh  main.c
research/psp/sdl2/: CMakeLists.txt  main.c
(+502 files in other folders)
