cmake_minimum_required(VERSION 3.5)

project(sdl2)

add_executable(${PROJECT_NAME}
  main.c)

include(FindPkgConfig)

pkg_search_module(SDL2 REQUIRED sdl2)

target_include_directories(${PROJECT_NAME} PRIVATE
  ${SDL2_INCLUDE_DIRS})

target_link_libraries(${PROJECT_NAME} PRIVATE
  ${SDL2_LIBRARIES})

if(PSP)
  create_pbp_file(
    TARGET ${PROJECT_NAME}
    ICON_PATH NULL
    BACKGROUND_PATH NULL
    PREVIEW_PATH NULL
    TITLE "SDL2 Example"
    VERSION 01.00
  )
endif()

